--- a/Client/src/Components/Features/About/About.module.css
+++ b/Client/src/Components/Features/About/About.module.css
@@ -1,3 +1,8 @@
 .mainContainer {
     flex: 50%;
 }
+
+.title{
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
