--- a/Client/src/Containers/TempPage/TempPage.module.css
+++ b/Client/src/Containers/TempPage/TempPage.module.css
@@ -4,3 +4,21 @@
     width: 100vw;
     justify-content: space-between;
 }
+
+.elementToFadeInAndOut {
+    width:200px;
+    height: 200px;
+    background: red;
+    -webkit-animation: fadeinout 2s linear forwards;
+    animation: fadeinout 2s linear forwards;
+}
+
+@-webkit-keyframes fadeinout {
+  0%,100% { opacity: 0; }
+  50% { opacity: 1; }
+}
+
+@keyframes fadeinout {
+  0%,100% { opacity: 0; }
+  50% { opacity: 1; }
+}
