--- a/Client/src/Components/Features/SingleInformation/SingleInformation.module.css
+++ b/Client/src/Components/Features/SingleInformation/SingleInformation.module.css
@@ -1,8 +1,34 @@
 .name{
     display: flex;
+
 }
 
 .mainContainer{
     display: flex;
-    
+    flex-direction: column;
+    margin: 0px 25px;
+}
+
+.topContainer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.score{
+    font-size: 20pt;
+}
+
+.name {
+    font-size: 24pt;
+}
+
+.grade{
+    margin: 10px;
+    font-size: 24pt;
+    font-weight: bold;
+}
+
+.details {
+    font-size: 16
 }
