--- a/Client/src/Components/Features/About/About.module.css
+++ b/Client/src/Components/Features/About/About.module.css
@@ -21,3 +21,10 @@
 .buttonWrapper {
     margin-top: 50px;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
