--- a/Client/src/Components/Features/Chart/Chart.module.css
+++ b/Client/src/Components/Features/Chart/Chart.module.css
@@ -3,23 +3,21 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     
     width: 50vw;
-    height: 50vh;
+    height: 60vh;
     background: white;
     padding: 30px 20px 10px 20px;
     border-radius: 10px;
-    -webkit-box-shadow: 0px 10px 0px -5px rgba(0,0,0,0.3);
-    -moz-box-shadow: 0px 10px 0px -5px rgba(0,0,0,0.3);
-    box-shadow: 0px 10px 0px -5px rgba(0,0,0,0.3);
+    border: 1px solid lightgrey;
 
 }
 
 .container {
-    height: 100vh;
-    width: 100%;
+    flex: 50%;
     background: var(--theme-primary);
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding-right: 20px;
 }
