--- a/Client/src/Components/Features/SingleInformation/SingleInformation.module.css
+++ b/Client/src/Components/Features/SingleInformation/SingleInformation.module.css
@@ -7,28 +7,55 @@
     display: flex;
     flex-direction: column;
     margin: 0px 25px;
+    flex: 50%;
+    height: 66vh;
 }
 
 .topContainer{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-radius: 10px;
+    background-color: lightgray;
 }
 
 .score{
     font-size: 20pt;
+    margin: 15px 10px;
 }
 
 .name {
     font-size: 24pt;
+    padding: 10px;
 }
 
 .grade{
-    margin: 10px;
-    font-size: 24pt;
+    margin: 5px;
+    margin-right: 30px;
+    font-size: 30pt;
     font-weight: bold;
+    flex: 30%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.gradeInner{
+    
 }
 
 .details {
-    font-size: 16
+    font-size: 18;
+    margin: 10px;
+}
+
+.detailsHeading {
+    font-size: 18;
+    margin: 10px;
+    font-weight: bold;
+}
+
+p{
+    padding: 0px 10px;
+    margin: 0px;
 }
